# differ

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-release.yml  ci.yml
scripts/: build-appimage-ubuntu.sh  build-windows-msi.ps1  ci-build-linux-packages.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
website/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json
website/assets/css/: main.css
